# AndroidPades

app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Makefile  Makefile.in  config.h  config.h.in  libp11.map  libp11.pc  springclient.cpp
app/src/main/cpp/libopensc/: card-npa.c  card.c  cards.h  ctx.c  internal-winscard.h  internal.h  reader-tr03119.c
app/src/main/cpp/libs/x86_64/openssl/: aes.h  asn1.h  asn1err.h  asn1t.h  asyncerr.h  bio.h  bioerr.h  blowfish.h  bn.h  bnerr.h  buffer.h  buffererr.h  camellia.h  cast.h  cmac.h  cmp.h  cmp_util.h  cmperr.h  cms.h  cmserr.h  comp.h  comperr.h  conf.h  conf_api.h  conferr.h  crmf.h  crmferr.h  crypto.h  cryptoerr.h  cryptoerr_legacy.h  ct.h  cterr.h  decoder.h  decodererr.h  des.h  dh.h  dherr.h  dsa.h  dsaerr.h  dtls1.h  (+67 more)
app/src/main/cpp/pkcs11/: openssl.c
app/src/main/cpp/pkcs15init/: pkcs15-epass2003.c  pkcs15-init.h  pkcs15-lib.c  pkcs15-sc-hsm.c  profile.c
app/src/main/cpp/sm/: sm-common.c
app/src/main/java/com/chilkatsoft/: CkAuthAws.java  CkBinData.java  CkCache.java  CkCert.java  CkCertChain.java  CkCertStore.java  CkCodeSign.java  CkCreateCS.java  CkCrypt2.java  CkCsp.java  CkCsr.java  CkCsv.java  CkDateTime.java  CkDirTree.java  CkDns.java  CkDsa.java  CkEcc.java  CkEdDSA.java  CkEmail.java  CkFileAccess.java  CkFtp2.java  CkGlobal.java  CkHashtable.java  CkHtmlToText.java  CkHtmlToXml.java  CkHttp.java  CkHttpResponse.java  CkImap.java  CkJsonArray.java  CkJsonObject.java  CkJwe.java  CkKeyContainer.java  CkMailMan.java  CkMessageSet.java  CkMime.java  CkOAuth1.java  CkOAuth2.java  CkPdf.java  CkPfx.java  CkPkcs11.java  (+23 more)
app/src/main/java/com/example/springclient/: MainActivity.java  SimpleActivity.java
app/src/main/java/com/example/springclient/ui/dashboard/: DashboardFragment.java  DashboardViewModel.java
app/src/main/java/com/example/springclient/ui/home/: HomeFragment.java  HomeViewModel.java
app/src/main/java/com/example/springclient/ui/notifications/: NotificationsFragment.java  NotificationsViewModel.java
app/src/main/java/org/opensc/pkcs11/: PKCS11Provider.java  PKCS11SessionStore.java
app/src/main/java/org/opensc/pkcs11/spec/: PKCS11DSAKeyPairGenParameterSpec.java
app/src/main/java/org/opensc/pkcs11/spi/: PKCS11CipherSpi.java  PKCS11KeyPairGeneratorSpi.java  PKCS11KeyStoreSpi.java
app/src/main/java/org/opensc/pkcs11/wrap/: PKCS11DSAKeyPairGenerator.java  PKCS11Slot.java
app/src/main/res/layout/: activity_main.xml  activity_simple.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
